# quick-bites

./: .gitignore  README.md
.github/: renovate.json
argocd-kustomize-helms-support/: README.md  kustomization.yaml  minecraft-application.yaml  values.yaml
argocd-kustomize-helms-support/base/: gateway.yaml
flux-health/: README.md
flux-health/bootstrap/: bootstrap-kustomization.yaml  bootstrap-repo.yaml
flux-health/deployment/: kustomization.yaml
flux-health/deployment/applications/: kustomization.yaml
flux-health/deployment/applications/sock-shop/: sock-shop.yaml  (+2 more)
flux-health/deployment/services/: kustomization.yaml
goreleaser-blob/: .gitignore  .goreleaser.yaml  README.md  blob.md  go.mod  go.sum  main.go
goreleaser-blob/infrastructure/: blob.tf  main.tf  output.tf  variables.tf
goreleaser-brew-fish/: .goreleaser.yaml  README.md  go.mod  main.go
prometheus-dead-man-switch/: README.md
pulumi-aks-upgrade/: README.md
pulumi-aks-upgrade/infrastructure/: Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi-aks-upgrade/upgrade-aks/: Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi-argocd-sealedsecrets/: .gitignore  Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-azure-fluxcd-komodor/: Pulumi.yaml  README.md
pulumi-azure-logic-apps/: .gitignore  Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-azure-logic-apps/flow2/: workflow.json
pulumi-civo-cilium-hubble/: Pulumi.yaml  README.md
pulumi-civo-cilium-prometheus/: Pulumi.yaml  README.md  cilium.yaml
pulumi-cognito-gitops-ui/argocd/: Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-doppler/: Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-eks-velero/: Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-eks-vpc-cni-network-policies/: Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
pulumi-exoscale/: Pulumi.yaml  README.md  main.cue
pulumi-exoscale/cue.mod/: module.cue
pulumi-exoscale/sks/: sks.cue
pulumi-external-secret-operator/: README.md
pulumi-external-secret-operator/pulumi-external-secret-operator/: Pulumi.yaml  __main__.py  requirements.txt
pulumi-faasd-arm/: .gitignore  Pulumi.yaml  README.md
pulumi-hashnode-aws-amplify-hackathon/: Pulumi.dev.yaml  Pulumi.yaml  README.md  amplify.yaml  go.mod  go.sum  main.go
pulumi-mastodon/: cloud-init.yaml
pulumi-mastodon/internal/mastodon/: mastodon.go
pulumi-oci/: Pulumi.dev.yaml  Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-oci/config/: cloud-init.yaml
pulumi-oci/ssh/: oci  oci.pub
pulumi-opencost/01-flux/: kustomization.yaml  open-cost.yaml  prometheus.yaml
pulumi-ovh-kube/: Pulumi.yaml  README.md  go.mod  go.sum  kubeconfig.yaml  main.go
pulumi-random-provider/: Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-scaleway/: Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi-scaleway-kapsule/: Pulumi.yaml  README.md  go.mod  go.sum  main.go
pulumi-secretstore-csi-driver/: README.md
pulumi-secretstore-csi-driver/pulumi-aws-secretstore-csi/: Pulumi.yaml  aws-cli-pod.yaml  index.ts  package-lock.json  package.json  tmp.yaml  tsconfig.json
pulumi-secretstore-csi-driver/pulumi-azure-secretstore-csi/: Pulumi.yaml  index.ts  move.json  package-lock.json  package.json
pulumi-stackreference/: README.md
pulumi-stackreference/00-infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi-stackreference/01-kubernetes/: Pulumi.yaml  go.mod  go.sum  main.go
pulumi-transform-kubernetes/: README.md  statefulset.yaml
pulumi-validating-admission-policy/: Pulumi.yaml  README.md  index.ts  kubeconfig  package-lock.json  package.json  test.yaml
rust-actix-web-rest-api/: Cargo.toml  README.md
rust-actix-web-rest-api-diesel/: Cargo.toml  README.md  diesel.toml
rust-actix-web-rest-api-diesel/migrations/2023-03-18-103853_create_todo_table/: up.sql
rust-actix-web-rest-api-diesel/src/: main.rs
rust-actix-web-rest-api-diesel/src/api/: api.rs
rust-actix-web-rest-api-diesel/src/models/: todo.rs
rust-actix-web-rest-api-diesel/src/repository/: database.rs  mod.rs  schema.rs
rust-actix-web-rest-api-opentelemetry/: .env  Cargo.toml  README.md  postgres.yaml  prometheus.yaml  telemetry.yaml
rust-actix-web-rest-api-opentelemetry/migrations/2023-03-18-103853_create_todo_table/: down.sql  up.sql
rust-actix-web-rest-api-opentelemetry/src/: main.rs  telemetry.rs
rust-actix-web-rest-api-opentelemetry/src/api/: api.rs
rust-actix-web-rest-api-opentelemetry/src/models/: todo.rs
rust-actix-web-rest-api-opentelemetry/src/repository/: database.rs  schema.rs
rust-actix-web-rest-api/src/: main.rs
rust-actix-web-rest-api/src/api/: api.rs
rust-actix-web-rest-api/src/models/: todo.rs
rust-actix-web-rest-api/src/repository/: database.rs
rust-async/: Cargo.toml  README.md
rust-async/src/: main.rs
rust-builder-pattern/: Cargo.toml  README.md
rust-builder-pattern/src/: main.rs
rust-cosmonic-hello-world/: README.md
rust-cosmonic-hello-world/hello/: .gitignore  Cargo.toml  README.md  wasmcloud.toml
rust-cosmonic-hello-world/hello/.github/workflows/: release.yml
rust-cosmonic-hello-world/hello/src/: lib.rs
rust-error/: README.md
rust-in-the-cloud-aws/: README.md
rust-in-the-cloud-aws/dadjoke/: Cargo.toml  response.json
rust-in-the-cloud-aws/dadjoke/src/: main.rs
rust-json/: Cargo.toml  README.md
rust-json/src/: main.rs
rust-ssh/: Cargo.toml  README.md
rust-ssh/src/: main.rs
rust-tekton/services/rust-tekton-pipeline/: pipeline.yaml
rust-testcontainers/: .env  Cargo.toml  README.md
rust-testcontainers/seed/: cars.json
rust-testcontainers/src/: config.rs  db.rs  dto.rs  main.rs  model.rs
rust-typestate-builder-pattern/: Cargo.toml  README.md
rust-typestate-builder-pattern/src/: main.rs
rust-vs-go/: .gitignore  README.md
rust-vs-go/go/: go.mod  main.go
rust-vs-go/rust/: Cargo.toml
rust-vs-go/rust/src/: main.rs
trivy-custom-policy/: README.md
trivy-custom-policy/config/: pod.yaml
trivy-operator-custom-policy/: Pulumi.yaml  README.md  policy.yaml
(+8 files in other folders)
