[package]
name = "rust-actix-web-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-opentelemetry = { version = "0.16.0", features = ["opentelemetry-prometheus", "metrics", "metrics-prometheus", "prometheus"] }
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing = "0.1.40"
opentelemetry = { version = "0.21.0", features = ["rt-tokio-current-thread","trace"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio-current-thread", "collector_client", "rt-tokio", "isahc_collector_client"] }
tracing-opentelemetry = { version = "0.22.0"}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry-prometheus = "0.14.1"
