[package]
name = "rust-actix-web-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
