[package]
name = "rust-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.21.1", features = ["v1_24"] }
kube = { version = "0.88.1", features = ["default", "derive"] }
tokio = { version = "1.36.0", features = ["full"] }
