[package]
name = "rust-testcontainers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
dotenvy = "0.15.7"
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["derive"] }
testcontainers = { version = "0.25.0", features = ["tokio", "async-trait"] }
